Added graphic for the tooltips as well as the jquery tooltip library

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel='stylesheet' href='css/base.css' type='text/css' />
         <link rel='shortcut icon' href='data/favicon.png' type='image/png' />
         <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js'></script>
+        <script type='text/javascript' src='js/jquery.tools.min.js'></script>
         <script type='text/javascript' src='js/clock.js'></script>
         <script type='text/javascript' src='js/misc.js'></script>
         <script type='text/javascript' src='js/main.js'></script>
