added my profile pic

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
          </div>
     </header>
     <div id="main" role="main">
-
+        <div id="left_panel">
+            <img id="profile_pic" src="http://a3.sphotos.ak.fbcdn.net/hphotos-ak-snc6/263420_2155603816145_1427966590_32408888_5087090_n.jpg" alt="Profile Picture" /> 
+            <br />
+            <br />
+            <p>
+                <strong>About me</strong> <br /><br />
+                adfka;dfkladsj;faksdljfasd;klfjskfjad;kf
+            </p>
+        </div>
+        <div id="right_panel">
+            adfa
+        </div>
     </div>
     <footer>
 
