Added a small bio, and linked my blog

--- a/index.html
+++ b/index.html
@@ -65,15 +65,32 @@
             <br />
             <p>
                 <strong>About me</strong> <br /><br />
-                adfka;dfkladsj;faksdljfasd;klfjskfjad;kf
+                Hello there, 
+                this is my personal website. &nbsp; Most of this information is public on
+                and can be easily found online.  &nbsp; I built this very simple site mostly to aggragate 
+                the sources I deemed imporant (see header links).
+
+                <br />
+                <br />
+                You can view my resume on the right, or visit my blog.  &nbsp;Thanks for
+                the visit!
             </p>
         </div>
         <div id="right_panel">
-            adfa
+            <br /><br /><br /><br /><br />
+            <a href="resume.html">My Resume</a>
+            <br /><br /><br />
+            <a href="http://eudisduran.com/wp">My Blog</a>
+
+            <br /><br /><br /><br /><br /><br />
+            <p>
+            For a small description of the technologies used to 
+            build this site, click <a href='#'>here</a>.
+            </p>
         </div>
     </div>
     <footer>
-
+        &copy; 2011 Eudis Duran
     </footer>
   </div> <!--! end of #container -->
 
