Added some cool styles to links and such

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <br />
             <p>
                 <strong>About me</strong> <br /><br />
-                Hello there, 
-                this is my personal website. &nbsp; Most of this information is public on
-                and can be easily found online.  &nbsp; I built this very simple site mostly to aggragate 
-                the sources I deemed imporant (see header links).
+                Hello there, I am web developer based in NYC and
+                this is my personal website. &nbsp; Information about me is public
+                and can be easily Googled.  <br /><br />I built this very simple site mostly to aggragate 
+                the sources of information I deemed imporant (see header links).
 
                 <br />
                 <br />
@@ -78,9 +78,11 @@
         </div>
         <div id="right_panel">
             <br /><br /><br /><br /><br />
-            <a href="resume.html">My Resume</a>
             <br /><br /><br />
-            <a href="http://eudisduran.com/wp">My Blog</a>
+            <a id="resume" href="resume.html">My Resume</a>
+            <br /><br /><br />
+            <br /><br />
+            <a id="blog" href="http://eudisduran.com/wp">My Blog</a>
 
             <br /><br /><br /><br /><br /><br />
             <p>
