--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <br />
             <p>
                 <strong>About me</strong> <br /><br />
-                Hello there, I am web developer based in NYC and
+                Hello there, I am a web developer based in NYC and
                 this is my personal website. &nbsp; Information about me is public
                 and can be easily Googled.  <br /><br />I built this very simple site mostly to aggragate 
                 the sources of information I deemed imporant (see header links).
