Removed my name from footer copy, and adjusted the padding for the panel (chrome fix)

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2011 Eudis Duran
+        &copy; 2011 
     </footer>
   </div> <!--! end of #container -->
 
