Fixed a few errors on the main index page

--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
             <br />
             <p>
                 <strong>About me</strong> <br /><br />
-                Hello there, I am a web developer based in NYC and
-                this is my personal website. &nbsp; Information about me is public
-                and can be easily Googled.  <br /><br />I built this very simple site mostly to aggragate 
-                the sources of information I deemed imporant (see header links).
+                Hello there, I am a web developer and student based in NYC and
+                this is my personal website. &nbsp;  <br /><br />I built this very simple site mostly to aggragate 
+                the sources of information about me that I deemed imporant (see header links).
 
                 <br />
                 <br />
@@ -82,7 +81,7 @@
             <a id="resume" href="resume.html">My Resume</a>
             <br /><br /><br />
             <br /><br />
-            <a id="blog" href="http://eudisduran.com/wp">My Blog</a>
+            <a id="blog" href="http://eudisduran.blogspot.com/">My Blog</a>
 
             <br /><br /><br /><br /><br /><br />
             <p>
