--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <!-- CSS: implied media="all" -->
-  <link rel="stylesheet" href="css/style.css?v=2">
+  <link rel="stylesheet" href="/css/style.css?v=2">
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
 
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="js/libs/modernizr-1.7.min.js"></script>
+  <script src="/js/libs/modernizr-1.7.min.js"></script>
   
 
 </head>
@@ -45,16 +45,16 @@
          </div>
          <div id='icons'> 
             <a id='twitter' href='http://twitter.com/#!/eudisduran' target='_blank'>
-                <img class='icon' src='img/twitter_icon.png' alt='My Twitter Page' />
+                <img class='icon' src='/img/twitter_icon.png' alt='My Twitter Page' />
             </a>
             <a id='fb' href='http://www.facebook.com/profile.php?id=1427966590' target='_blank'>
-                <img class='icon' src='img/facebook_icon.png' alt='My FB Page' />
+                <img class='icon' src='/img/facebook_icon.png' alt='My FB Page' />
             </a>
             <a id='linkedin' href='http://www.linkedin.com/pub/eudis-duran/26/5a/2b' target='_blank'>
-                <img class='icon' src='img/linkedin_icon.png' alt='My Linkedin Page' />
+                <img class='icon' src='/img/linkedin_icon.png' alt='My Linkedin Page' />
             </a>
             <a id='github' href='http://github.com/eudisd' target='_blank'>
-                <img class='icon iconpad' src='img/github_icon.png' alt='My Github Page' />
+                <img class='icon iconpad' src='/img/github_icon.png' alt='My Github Page' />
             </a>
          </div>
     </header>
@@ -110,12 +110,12 @@
   </script>
 
   <!-- scripts concatenated and minified via ant build script-->
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/script.js"></script>
   <!-- end scripts-->
 
   <!--[if lt IE 7 ]>
-    <script src="js/libs/dd_belatedpng.js"></script>
+    <script src="/js/libs/dd_belatedpng.js"></script>
     <script>DD_belatedPNG.fix("img, .png_bg"); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
   <![endif]-->
 
