In the process of removing html5boiler plate...

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     </header>
     <div id="main" role="main">
         <div id="left_panel">
-            <img id="profile_pic" src="http://a3.sphotos.ak.fbcdn.net/hphotos-ak-snc6/263420_2155603816145_1427966590_32408888_5087090_n.jpg" alt="Profile Picture" /> 
-            <br />
+            <!--<img id="profile_pic" src="http://a3.sphotos.ak.fbcdn.net/hphotos-ak-snc6/263420_2155603816145_1427966590_32408888_5087090_n.jpg" alt="Profile Picture" /> 
+            --><br />
             <br />
             <p>
                 <strong>About me</strong> <br /><br />
@@ -118,7 +118,6 @@
     <script src="/js/libs/dd_belatedpng.js"></script>
     <script>DD_belatedPNG.fix("img, .png_bg"); // Fix any <img> or .png_bg bg-images. Also, please read goo.gl/mZiyb </script>
   <![endif]-->
-
 
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
   <script>
