This should point to my resume now

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="right_panel">
             <br /><br /><br /><br /><br />
             <br /><br /><br />
-            <a id="resume" href="http://eudisduran.com/resume.html">My Resume</a>
+            <a id="resume" href="/resume.html">My Resume</a>
             <br /><br /><br />
             <br /><br />
             <a id="blog" href="http://eudisduran.blogspot.com/">My Blog</a>
