more work on the resume page

--- a/resume.html
+++ b/resume.html
@@ -37,8 +37,34 @@
 <body>
   <div id="container">
     <header>
+		<div id='name'> 
+            Eudis Duran
+         </div>
+         <div id='subtitle'>
+            - Programmer -
+         </div>
+         <div id='icons'> 
+            
+         </div>
     </header>
     <div id="main" role="main">
+		<div id="left_col">
+			<p class="title">THE CITY COLLEGE OF NEW YORK - Of The City University Of New York </p>
+			<p class="desc">
+     Bachelor of Science (B.S.) - Computer Science <br/>
+     160 Convent Avenue, New York, N.Y. 10031<br/>
+     Anticipated Graduation Date: Spring 2012<br/>
+     GPA: 3.5</p>
+	 <p class="title"><br/>BRONX COMMUNITY COLLEGE - Of The City University Of New Yorkputer Science<p class="desc">
+      W 181st University Ave <br/>
+      Associates of Science (A.S.) - Comsity Ave Bronx, N.Y. 10453 <br/>
+      Graduated: January 2009 <br/>
+      GPA: 3.6</p>
+		</div>
+		<div id="right_col">
+			there
+		</div>
+		
     </div>
     <footer>
         &copy; 2011 Eudis Duran
