Working on the experience section

--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,8 @@
     </header>
     <div id="main" role="main">
 		<div id="left_col">
-			<p class="title">THE CITY COLLEGE OF NEW YORK - Of The City University Of New York </p>
+			<h class="head">Education</h>
+			<p class="title"><br/>THE CITY COLLEGE OF NEW YORK - Of The City University Of New York </p>
 			<p class="desc">
      Bachelor of Science (B.S.) - Computer Science <br/>
      160 Convent Avenue, New York, N.Y. 10031<br/>
@@ -62,7 +63,7 @@
       GPA: 3.6</p>
 		</div>
 		<div id="right_col">
-			there
+			<h class="head">Experience</h>
 		</div>
 		
     </div>
