Some progress.  Gotta go to the gym...

--- a/resume.html
+++ b/resume.html
@@ -78,7 +78,11 @@
 					- Refactored procedural code to a more OO code<br/>
 					
 				</p>
-				<p class="position">Software Engineering Intern </p>
+				<p class="position">Software Engineering Intern 
+					<br/><span class="date">
+						February 2011 - June 2011
+					</span>
+				</p>
 				
 				<p class="company">DOHMH Office of Emergency Environmental Information (New York, NY)</p>
 				<p class="job_desc">
