Finished skills section

--- a/resume.html
+++ b/resume.html
@@ -61,6 +61,17 @@
       Associates of Science (A.S.) - Comsity Ave Bronx, N.Y. 10453 <br/>
       Graduated: January 2009 <br/>
       GPA: 3.6</p>
+	  
+		<hr/>
+		<h class="head">Skills of The Trade</h>
+		<p id="skills">
+		C/C++, PHP, Python, SQL, Javascript, Scheme, HTML5/Canvas, Bash
+		</p>
+		<hr/>
+		<h class="head">Softwares</h>
+		<p id="skills2">
+			MongoDB, GCC, Mercurial, GIT, SVN, Apache, Linux (Ubuntu), Visual Studio
+		</p>
 		</div>
 		<div id="right_col">
 			<h class="head">Experience</h>
