Finished all the experience parts.  Need to make this dynamically loadable

--- a/resume.html
+++ b/resume.html
@@ -76,12 +76,14 @@
 		<div id="right_col">
 			<h class="head">Experience</h>
 			<p>
+				
+				<!--
 				<p class="position">Web Developer Intern 
 					<br/><span class="date">
 						May 2011 - August 2011
 					</span>
 				</p>
-				<p class="company">Ignighter, Inc.</p>
+				<p class="company">Ignighter, INC.</p>
 				<p class="job_desc">
 					- Programmer for email notification sub-system (www.ignighter.com)<br/>
 					- Co-authored a mock Windows Phone 7 company application<br/>
@@ -104,16 +106,38 @@
        (MongoDB)<br/>
 					- Used SVN to commit source changes
 				</p>
-
-
-
-
-
+				-->
+				<p class="position">Programming Intern  
+					<br/><span class="date">
+						May 2011 - August 2011
+					</span>
+				</p>
+				<p class="company">Datranmedia, LLC</p>
+				<p class="job_desc">
+					- Wrote helper scripts in PHP, Python and Javascript<br/>
+					- Wrote internal tools for the www.top-colleges.com back-end<br/>
+					- Attended to JIRA tickets filed by the account management team<br/>
+					- Used Perforce to commit system changes<br/>
+					
+				</p>
+				<p class="position">Technology Support Intern  
+					<br/><span class="date">
+						September 2009 - June 2010
+					</span>
+				</p>
+				<p class="company">New York Department of Education</p>
+				<p class="job_desc">
+					- Maintained the website http://www.innovationdp.org/<br/>
+					- Assisted DOE staff with computer problems<br/>
+					- Configured CISCO Pro-Con servers when Internet issues arose<br/>
+					- Configured printers, copiers, and desktops through sub-netted LAN networks<br/>
+					- Setup over 900 Lenovo laptops for said High School<br/>
+				</p>
 			</p>
 			<p>	
 				<br />
 				<br />
-				<a href='/loadMore'>more >></a>
+				<a id="more_btn" href="#">more >></a>
 			</p>
 		</div>
 		
@@ -131,7 +155,7 @@
   <script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
   <!-- scripts concatenated and minified via ant build script-->
   <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/resume.js"></script>
   <!-- end scripts-->
 
   <!--[if lt IE 7 ]>
