preparing for some ajax baby

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
                 <br />
                 <br />
-                You can view my resume on the right, or visit my blog.  &nbsp;Thanks for
+                You can view my resume on the right, or visit my blog. Many random projects reside on 
+				my github repository, so go there if you're interested.&nbsp;Thanks for
                 the visit!
             </p>
         </div>
