Finished the ajax stuff

--- a/resume.html
+++ b/resume.html
@@ -81,6 +81,7 @@
 			<p>	
 				<br />
 				<br />
+				<!--<img id="ajax" src="/img/ajax-loader.gif" border="0" />-->
 				<a id="more_btn" href="#">more >></a>
 			</p>
 		</div>
