Adding css file to proper dir

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- CSS: implied media="all" -->
   <link rel="stylesheet" href="/css/style.css?v=2">
-
+  <link rel="stylesheet" href="/css/facebox.css">
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
 
@@ -113,6 +113,7 @@
   <!-- scripts concatenated and minified via ant build script-->
   <script src="/js/plugins.js"></script>
   <script src="/js/script.js"></script>
+  <script src="/js/libs/facebox1.3/facebox.js"></script>
   <!-- end scripts-->
 
   <!--[if lt IE 7 ]>
