--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <br /><br /><br /><br /><br /><br />
             <p>
             For a small description of the technologies used to 
-            build this site, click <a href='#'>here</a>.
+            build this site, click <a id="lib_desc" href='#'>here</a>.
             </p>
         </div>
     </div>
