Finally adding the recaptcha stuff for m y info

--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
 <body>
   <div id="container">
     <header>
-		<div id='name'> 
+    <div id='name'> 
             Eudis Duran
          </div>
          <div id='subtitle'>
@@ -46,6 +46,11 @@
          <div id='icons'> 
          </div>
     </header>
+    <div id="contact_info">
+        Email: <span id="email">E...com</span> <br />
+        Phone: <span id="phone">646...</span> </br />
+
+    </div>
     <div id="main" role="main">
 		<div id="left_col">
 			<h class="head">Education</h>
