Still working on the front-end side of the recaptcha stuff

--- a/resume.html
+++ b/resume.html
@@ -37,30 +37,34 @@
 <body>
   <div id="container">
     <header>
-    <div id='name'> 
+        <div id='name'> 
             Eudis Duran
-         </div>
+        </div>
          <div id='subtitle'>
             - Programmer -
          </div>
          <div id='icons'> 
          </div>
     </header>
-    <div id="contact_info">
-        Email: <span id="email">E...com</span> <br />
-        Phone: <span id="phone">646...</span> </br />
 
-    </div>
     <div id="main" role="main">
 		<div id="left_col">
+    <div id="contact_info">
+        <div id="contact_div">
+            Email: <span id="email"><a href="#">e...@gmail.com</a></span> <br />
+            Phone: <span id="phone"><a href="#">646...1</a></span> </br />
+            <br />
+            <br />
+        </div>
+    </div>
 			<h class="head">Education</h>
-			<p class="title"><br/>THE CITY COLLEGE OF NEW YORK - Of The City University Of New York </p>
+			<p class="title"><br/>The City College of New York - Of The City University Of New York </p>
 			<p class="desc">
      Bachelor of Science (B.S.) - Computer Science <br/>
      160 Convent Avenue, New York, N.Y. 10031<br/>
      Anticipated Graduation Date: Spring 2012<br/>
      GPA: 3.5</p>
-	 <p class="title"><br/>BRONX COMMUNITY COLLEGE - Of The City University Of New Yorkputer Science<p class="desc">
+	 <p class="title"><br/>Bronk Community College - Of The City University Of New Yorkputer Science<p class="desc">
       W 181st University Ave <br/>
       Associates of Science (A.S.) - Comsity Ave Bronx, N.Y. 10453 <br/>
       Graduated: January 2009 <br/>
