Fixed a small typo on my resume page

--- a/resume.html
+++ b/resume.html
@@ -49,14 +49,16 @@
 
     <div id="main" role="main">
 		<div id="left_col">
-    <div id="contact_info">
+    <p id="contact_info">
         <div id="contact_div">
             Email: <span id="email"><a href="#">e...@gmail.com</a></span> <br />
             Phone: <span id="phone"><a href="#">646...1</a></span> </br />
             <br />
             <br />
         </div>
-    </div>
+        
+        </p>
+      <hr />
 			<h class="head">Education</h>
 			<p class="title"><br/>The City College of New York - Of The City University Of New York </p>
 			<p class="desc">
@@ -64,7 +66,7 @@
      160 Convent Avenue, New York, N.Y. 10031<br/>
      Anticipated Graduation Date: Spring 2012<br/>
      GPA: 3.5</p>
-	 <p class="title"><br/>Bronk Community College - Of The City University Of New Yorkputer Science<p class="desc">
+	 <p class="title"><br/>Bronk Community College - Of The City University Of New York<p class="desc">
       W 181st University Ave <br/>
       Associates of Science (A.S.) - Comsity Ave Bronx, N.Y. 10453 <br/>
       Graduated: January 2009 <br/>
