Recapture is done on my personal website

--- a/resume.html
+++ b/resume.html
@@ -51,8 +51,8 @@
         <div id="left_col">
             <p id="contact_info">
             <div id="contact_div">
-                Email: <span id="email"><a href="#">e...@gmail.com</a></span> <br />
-                Phone: <span id="phone"><a href="#">646...1</a></span> </br />
+                Email: <span id="email"><a href="http://www.google.com/recaptcha/mailhide/d?k=01OHzhskTuLOEcuFaP5y129g==&amp;c=pCZwbwrg0mTJZwaBnhmrgZN6LtOp2jy21DijqOj5tTg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501OHzhskTuLOEcuFaP5y129g\75\75\46c\75pCZwbwrg0mTJZwaBnhmrgZN6LtOp2jy21DijqOj5tTg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">eud...@gmail.com</a></span> <br />
+               
                 <br />
                 <br />
             </div>
