Updated my resume info

--- a/resume.html
+++ b/resume.html
@@ -54,8 +54,14 @@
                 Email: <span id="email"><a href="http://www.google.com/recaptcha/mailhide/d?k=01OHzhskTuLOEcuFaP5y129g==&amp;c=pCZwbwrg0mTJZwaBnhmrgZN6LtOp2jy21DijqOj5tTg=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501OHzhskTuLOEcuFaP5y129g\75\75\46c\75pCZwbwrg0mTJZwaBnhmrgZN6LtOp2jy21DijqOj5tTg\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">eud...@gmail.com</a></span> <br />
                
                 <br />
-                <br />
             </div>
+            </p>
+
+            <p>
+                Currently: <span style='color:rgb(110,110,155);'>Not Looking
+                    For Work </span>
+                <br />
+                <br />
             </p>
 			<h class="head">Education</h>
 			<p class="title"><br/>The City College of New York - Of The City University Of New York </p>
@@ -87,7 +93,6 @@
 				
 			</p>
 			<p>	
-				<br />
 				<br />
 				<!--<img id="ajax" src="/img/ajax-loader.gif" border="0" />-->
 				<a id="more_btn" href="#">more >></a>
