--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
      160 Convent Avenue, New York, N.Y. 10031<br/>
      Anticipated Graduation Date: Spring 2012<br/>
      GPA: 3.5</p>
-	 <p class="title"><br/>Bronk Community College - Of The City University Of New York<p class="desc">
+	 <p class="title"><br/>Bronx Community College - Of The City University Of New York<p class="desc">
       W 181st University Ave <br/>
       Associates of Science (A.S.) - Comsity Ave Bronx, N.Y. 10453 <br/>
       Graduated: January 2009 <br/>
